less/custom.less
@import '_variables.less';

.jumbotron-custom {
  & {
    background-image: url('../static/images/banner.jpg');
    height: 500px;
    background-size: cover;
    background-position: 0% 20%;
  }

  .logo-ctn {
    & {
      padding: 145px 0 0 0;
      position: relative;
    }
    .guest-btn {
      & {
        cursor: pointer;
        position: absolute;
        top: 140px;
        left: 210px;
        width: 98px;
        display: flex;
        justify-content: center;
        align-items: center;
        text-decoration: none;
      }

      .dialog-box {
        & {
          background-color: @brand-primary;
          display: flex;
          justify-content: center;
          align-items: center;
          height: 32px;
          width: 90px;
          color: @white;
          font-size: 15px;
          font-weight: 400;
          border-radius: 3px;
        }

        .dialog-arrow {
          position: absolute;
          bottom: -5px;
          left: calc(50% - 5px); // This is for IE11
          background-color: @brand-primary;
          width: 10px;
          height: 10px;
          transform: rotate(45deg);
        }
      }
    }
  }

  .header-ctn {
    & {
      padding: 26px 0 0 0;
    }

    h1 {
      color: @white;
      font-size: 30px;
      font-weight: 600;
      margin: 2px 0;
    }
  }

  .banner-logo {
    width: 280px;
  }
}

.social-banner {
  & {
    background-color: @brand-primary;
    display: flex;
    height: 50px;
    font-size: 16px;
    font-weight: 600;
    color: white;
    margin: 0 -15px;
  }

  @media (max-width: 768px) {
    height: 100px;
  }

  .container {
    & {
      display: flex;
      justify-content: space-between;
    }
    &:after,
    &:before {
      content: none;
    }

    .social-media-options {
      display: flex;
      align-items: center;
    }

    @media (max-width: 768px) {
      flex-direction: column;
      justify-content: space-evenly;
    }

    // this is for IE11
    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
      justify-content: space-around;
      }
  }

  ul {
    & {
      display: flex;
      align-items: center;
      list-style-type: none;
      padding-left: 0;
    }
    a {
      display: flex;
      align-items: center;
      color: @white;
      &:hover {
        text-decoration: none;
        border-bottom: none;
        span {
          text-decoration: underline;
        }
      }
    }
  }

  .fa,
  .google-podcast-img {
    margin-left: 20px;
    margin-right: 5px;
    font-size: 24px;
  }

  .google-podcast-img {
    width: 24px;
  }

  .social-share {
    img {
      width: 24px;
      margin-left: 20px;
    }

    .small-icon {
      & {
        width: 24px;
        height: 24px;
        margin-left: 20px;
        display: flex;
        justify-content: center;
        align-items: center;
      }

      .fa {
        font-size: 14px;
        color: @brand-primary;
        margin: 0;
      }

      .email-thick {
        font-weight: 600;
      }
    }

    .inverted {
      background-color: @white;
    }
  }
}

.description-eos,
.rss-feeds,
.the-hosts {
  & {
    margin: 0 -15px;
  }

  h2,
  h3 {
    font-weight: 800;
    color: @header-black;
    margin: 60px 0 35px 0;
  }

  p {
    font-size: 21px;
  }
}

.rss-feeds {
  margin-bottom: 60px;
}

.the-hosts {
  & {
    background-color: #eaeae5;
  }

  .img-responsive {
    border-radius: 50%;
    width: 170px;
  }

  .eclipsefdn-user-bios > div {
    & {
      padding: 12px 0;
    }

    h3 {
      margin: 15px 0 20px 0;
    }

    .eclipsefdn-user-bios-picture {
      padding-right: 0;
    }

    .eclipsefdn-user-bios-info {
      padding: 0;
    }
  }

  .container {
    padding-bottom: 40px;
  }
}

.eclipse-logo-ctn {
  & {
    background-color: @brand-primary;
    margin: 0 -15px;
    display: flex;
    align-items: center;
    flex-direction: column;
  }

  .sponsor-text{
    position: relative;
    top: 26px;
    color: @white;
  }

  img {
    width: 280px;
  }
}

#back-to-top {
  position: relative;
  bottom: 146px;
}

footer#solstice-footer {
  padding-top: 45px;
}

@media (max-width: 1199px) {
  .container,
  .social-banner .container {
    width: 100%;
  }
}

